--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-dark bg-dark">
             <div class="menu">
             <ul>
-                    <img src="logo.jpg" alt="">
+                    <img src="logo.jpg" alt="logo do site">
                     <li><a href="#">Início            </a></li>
                     <li><a href="#">Pesquisa Avançada </a></li>
                     <li><a href="#">Sobre Nós         </a></li>
