--- a/static/index.html
+++ b/static/index.html
@@ -74,21 +74,27 @@
                                 </div>
                             </div>   
                             <div class = "row">
+                                    <div class = "container" id="resultadoNome"> 
+
+                                    </div>
+
                                     <div class = "col-sm-4">
                                         <div class = "placeBox">
                                             <div class = "imgBx">
                                                     <img src="https://gamewith-en.akamaized.net/img/e1d6fef5430fc7e654dda202ffe37a44.jpg" class= "img-fluid" alt="Imagem solos">
                                             </div>
-                                            <div class = "content" id="resultadoSolo">                                                 
-                                            </div>                                            
+                                            <h3>Solos</h3>  
+                                            <div class = "content" id="resultadoSolo">                                                                                                    
+                                            </div>                                           
                                         </div>
                                     </div>
                                     <div class = "col-sm-4">
                                         <div class = "placeBox">
                                             <div class = "imgBx">
                                                     <img src="https://gamewith-en.akamaized.net/img/7f06c1607d01136525b738f34d78b96b.jpg" class= "img-fluid" alt="Imagem Duos">
-                                            </div>     
-                                            <div class = "content" id="resultadoDuo">                                                 
+                                            </div>  
+                                            <h3>Duos</h3>   
+                                            <div class = "content" id="resultadoDuo">
                                             </div>                                         
                                         </div>
                                     </div>
@@ -96,8 +102,9 @@
                                         <div class = "placeBox">
                                             <div class = "imgBx">
                                                     <img src="https://gamewith-en.akamaized.net/img/b4dd4922fe55867df0f912450de3cafb.jpg" class= "img-fluid" alt="Imagem squad">
-                                            </div>   
-                                            <div class = "content" id="resultadoSquad">                                                 
+                                            </div> 
+                                            <h3>Squad</h3>   
+                                            <div class = "content" id="resultadoSquad">      
                                             </div>                                           
                                         </div>
                                     </div>
