--- a/static/index.html
+++ b/static/index.html
@@ -49,7 +49,7 @@
                         <h1 class="nome-do-site"><strong>Fortnite Agent</strong></h1>
                         <h2 class = "header"><strong>Seja bem vindo!</strong></h2>
                         <p class = "header">Analise seus stats e ranking do Fortnite</p>   
-                        <div class = "row">             
+                        <div class = "row2">             
                         <div class = "offset-sm-2 col-sm-8">
                         <a href="#stats" class="btn btnD1">Vamos Lá</a>                    
                         </div>
@@ -117,12 +117,9 @@
                             </div>                        
                            
                         </div> 
-                    </div>
-                </div>    
-        </div>
-
+                    </div>               
     </section>
-    <section class = "sec2" id = "desafios" style="margin-top: 3em; margin-bottom: 10em">
+    <section class = "sec2" id = "desafios">
         <div class = "contentBox h100">
             <div>
                 <h1>Desafios Diários</h1>
@@ -133,21 +130,21 @@
 
     </section>
 
-    <section class="sobrenos" id="sobre" style="margin-top: 3em; margin-bottom: 10em">
+    <section class="sobrenos" id="sobre">
         <div class = "container">
             <div class = "row">
                 <div class = "offset-sm-2 col-sm-8">
-                    <div class = "headerText">
-                        <h2>Test</h2> 
-                        <p> testando estilos</p>
+                    <div class = "headerText text-center">
+                        <h2>Sobre Nós</h2> 
+                        <p>DescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescrição
+                                DescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescrição
+                                DescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescrição
+                        </p>
                     </div>
                     </div>
             </div>
-
-            </div>
-
-
-    </section>
+            </div>    
+        </section>
 
     <section class = "contact" id = "contato">
         <div class = "container">
