--- a/static/index.html
+++ b/static/index.html
@@ -78,7 +78,7 @@
 
                                     </div>
 
-                                    <div class = "col-sm-4">
+                                    <div class = "col-sm-3.5">
                                         <div class = "placeBox">
                                             <div class = "imgBx">
                                                     <img src="https://gamewith-en.akamaized.net/img/e1d6fef5430fc7e654dda202ffe37a44.jpg" class= "img-fluid" alt="Imagem solos">
@@ -88,7 +88,7 @@
                                             </div>                                           
                                         </div>
                                     </div>
-                                    <div class = "col-sm-4">
+                                    <div class = "col-sm-3.5">
                                         <div class = "placeBox">
                                             <div class = "imgBx">
                                                     <img src="https://gamewith-en.akamaized.net/img/7f06c1607d01136525b738f34d78b96b.jpg" class= "img-fluid" alt="Imagem Duos">
@@ -98,7 +98,7 @@
                                             </div>                                         
                                         </div>
                                     </div>
-                                    <div class = "col-sm-4">
+                                    <div class = "col-sm-3.5">
                                         <div class = "placeBox">
                                             <div class = "imgBx">
                                                     <img src="https://gamewith-en.akamaized.net/img/b4dd4922fe55867df0f912450de3cafb.jpg" class= "img-fluid" alt="Imagem squad">
@@ -152,7 +152,7 @@
                 <div class = "col-sm-12">
                     <div class="headerText">
                         <h2>Contato</h2>
-                        <p>Caso tenha algum problema bla bkla</p>
+                        <p>Problemas ou sugestões</p>
                     </div>
                 </div>
             </div>
@@ -187,9 +187,7 @@
         <p class="cpryt">Copyright 2019 Fortnite Agent |  
                 Feito por: <a href="#"> RarkS e ZeusRevoLTs </a>
         </p>
-
-</footer>      
-            
+</footer>                 
            
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
