--- a/static/index.html
+++ b/static/index.html
@@ -136,9 +136,8 @@
                 <div class = "offset-sm-2 col-sm-8">
                     <div class = "headerText text-center">
                         <h2>Sobre Nós</h2> 
-                        <p>DescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescrição
-                                DescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescrição
-                                DescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescriçãoDescrição
+                        <p>O Fortnite Agent surgiu com o objetivo de difundir informações sobre jogadores de Fortnite
+                            ao redor do mundo. :) 
                         </p>
                     </div>
                     </div>
