--- a/static/index.html
+++ b/static/index.html
@@ -159,7 +159,7 @@
                 <div class = "offset-sm-2 col-sm-8">
                     <form>
                         <div class = "form-group">
-                            <label>Name</label>
+                            <label>Nome</label>
                             <input type = "text" name = "" class = 
                             "form-control">
                         </div>
@@ -169,11 +169,11 @@
                                 "form-control">
                             </div>
                         <div class = "form-group">
-                                    <label>Message</label>
+                                    <label>Mensagem</label>
                                     <textarea class = "form-control textarea"> </textarea>
                                 </div> 
                         <div class = "form-group">
-                        <button class = "btn btnD1">Send</button> 
+                        <button class = "btn btnD1">Enviar</button> 
                         </div>        
                     </form>
                 </div>
