--- a/static/index.html
+++ b/static/index.html
@@ -81,7 +81,7 @@
                                     <div class = "col-sm-3.5">
                                         <div class = "placeBox">
                                             <div class = "imgBx">
-                                                    <img src="https://gamewith-en.akamaized.net/img/e1d6fef5430fc7e654dda202ffe37a44.jpg" class= "img-fluid" alt="Imagem solos">
+                                                    <img src="https://i.imgur.com/HZZecI9.png" class= "img-fluid" alt="Imagem solos">
                                             </div>
                                             <h3>Solos</h3>  
                                             <div class = "content" id="resultadoSolo">                                                                                                    
@@ -91,7 +91,7 @@
                                     <div class = "col-sm-3.5">
                                         <div class = "placeBox">
                                             <div class = "imgBx">
-                                                    <img src="https://gamewith-en.akamaized.net/img/7f06c1607d01136525b738f34d78b96b.jpg" class= "img-fluid" alt="Imagem Duos">
+                                                    <img src="https://i.imgur.com/vIz3EHx.png" class= "img-fluid" alt="Imagem Duos">
                                             </div>  
                                             <h3>Duos</h3>   
                                             <div class = "content" id="resultadoDuo">
@@ -101,7 +101,7 @@
                                     <div class = "col-sm-3.5">
                                         <div class = "placeBox">
                                             <div class = "imgBx">
-                                                    <img src="https://gamewith-en.akamaized.net/img/b4dd4922fe55867df0f912450de3cafb.jpg" class= "img-fluid" alt="Imagem squad">
+                                                    <img src="https://i.imgur.com/roVzTV8.png" class= "img-fluid" alt="Imagem squad">
                                             </div> 
                                             <h3>Squad</h3>   
                                             <div class = "content" id="resultadoSquad">      
