--- a/static/index.html
+++ b/static/index.html
@@ -94,9 +94,9 @@
                                                     <img src="https://i.imgur.com/HZZecI9.png" class= "img-fluid" alt="Imagem solos">
                                             </div>
                                            
-                                            <div class = "content" id="resultadoSolo">       
-                                                <h3>Solo</h3>                                                                                               
-                                            </div>                                           
+                                            <div class = "content"> 
+                                                    <h3>Solo</h3>  
+                                                    <p id="resultadoSolo"></p>                                          
                                         </div>
                                     </div>
                                     <div class = "col-sm-4">
