--- a/static/index.html
+++ b/static/index.html
@@ -60,7 +60,10 @@
                         data-aos-delay="300" class = "header">Analise seus stats e ranking do Fortnite</p>   
                         <div class = "row2">             
                         <div class = "offset-sm-2 col-sm-8">
-                        <a href="#stats" class="btn btnD1">Vamos Lá</a>                    
+                        <a href="#stats" class="btn btnD1" data-aos="fade-up"
+                        data-aos-offset="300"
+                        data-aos-delay="500" 
+                        data-aos-duration="1000">Vamos Lá</a>                    
                         </div>
                     </div> 
                     </div>
@@ -72,10 +75,19 @@
             <div class = "row">
                 <div class="container">
                     <div class = "headerText text-center">
-                        <h2>Stats check</h2>
-                        <p>Digite seu nickname abaixo</p>                       
+                        <h2 data-aos="fade-up"
+                        data-aos-offset="200"
+                        data-aos-delay="250" 
+                        data-aos-duration="1000">Stats check</h2>
+                        <p data-aos="fade-up"
+                        data-aos-offset="200"
+                        data-aos-delay="500" 
+                        data-aos-duration="1000">Digite seu nickname abaixo</p>                       
                                                    
-                            <div class="input-group">
+                            <div class ="input-group" data-aos="fade-up"
+                            data-aos-offset="200"
+                            data-aos-delay="400" 
+                            data-aos-duration="1000">
                                 <input type="text" id="nickname" class="form-control">
                                 <div class="input-group-append">
                                     <button type="button" id="pesquisar" class="btn btn-dark">Pesquisar</button>
@@ -84,12 +96,12 @@
                             </div>   
                             <div class = "row">
                                     <div class = "container" data-aos="fade-up" data-aos-offset="200"
-                                    data-aos-delay="100" data-aos-duration="1000" id="resultadoNome"> 
+                                    data-aos-delay="500" data-aos-duration="1000" id="resultadoNome"> 
                                     </div>
 
                                     <div class = "col-sm-3" style="margin-right: 41px">
                                             <div class = "box" data-aos="fade-up" data-aos-offset="200"
-                                            data-aos-delay="300" data-aos-duration="1000">
+                                            data-aos-delay="500" data-aos-duration="1000">
                                                 <div class = "imgBx">
                                                         <img src="https://i.imgur.com/HZZecI9.png" class= "img-fluid" alt="Imagem solos">
                                                 </div>  
@@ -99,13 +111,11 @@
                                                         <p id="resultadoSolo"></p>  
                                                     </div>                                         
                                             </div>
-                                        </div>
-
-                            
+                                        </div>                            
 
                                     <div class = "col-sm-3" style="margin-right: 41px">
                                         <div class = "box" data-aos="fade-up" data-aos-offset="200"
-                                        data-aos-delay="300" data-aos-duration="1000">
+                                        data-aos-delay="700" data-aos-duration="1000">
                                             <div class = "imgBx">
                                                     <img src="https://i.imgur.com/vIz3EHx.png" class= "img-fluid" alt="Imagem Duos">
                                             </div>  
@@ -118,7 +128,7 @@
 
                                     <div class = "col-sm-3">
                                         <div class = "box" data-aos="fade-up" data-aos-offset="200"
-                                        data-aos-delay="500" data-aos-duration="1000">
+                                        data-aos-delay="900" data-aos-duration="1000">
                                             <div class = "imgBx">
                                                     <img src="https://i.imgur.com/roVzTV8.png" class= "img-fluid" alt="Imagem squad">
                                             </div> 
@@ -150,7 +160,7 @@
                 > Desafios Diários</h1>
                 <p h1 data-aos="fade-up"
                 data-aos-offset="200"
-                data-aos-delay="300">Segue abaixo seus desafios diários</p>               
+                data-aos-delay="300">Segue abaixo seus desafios diários (Esperando a API sair da manutenção)</p>               
             </div>
         </div>
 
@@ -181,8 +191,14 @@
             <div class = "row">
                 <div class = "col-sm-12">
                     <div class="headerText">
-                        <h2>Contato</h2>
-                        <p>Problemas ou sugestões</p>
+                        <h2 data-aos="fade-up"
+                        data-aos-offset="200"
+                        data-aos-delay="300" 
+                        data-aos-duration="1000">Contato</h2>
+                        <p data-aos="fade-up"
+                        data-aos-offset="200"
+                        data-aos-delay="500" 
+                        data-aos-duration="1000">Problemas ou sugestões</p>
                     </div>
                 </div>
             </div>
@@ -190,21 +206,19 @@
                 <div class = "offset-sm-2 col-sm-8">
                     <form>
                         <div class = "form-group">
-                            <label>Nome</label>
-                            <input type = "text" name = "" class = 
-                            "form-control">
+                            <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="100" data-aos-duration="1000">Nome</label>
+                            <input type = "text" name = "" class = "form-control">
                         </div>
                         <div class = "form-group">
-                                <label>Email</label>
-                                <input type = "text" name = "" class = 
-                                "form-control">
+                                <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="200" data-aos-duration="1000">Email</label>
+                                <input type = "text" name = "" class = "form-control">
                             </div>
                         <div class = "form-group">
-                                    <label>Mensagem</label>
+                                    <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="300" data-aos-duration="1000">Mensagem</label>
                                     <textarea class = "form-control textarea"> </textarea>
                                 </div> 
                         <div class = "form-group">
-                        <button class = "btn btnD1">Enviar</button> 
+                        <button class = "btn btnD1" data-aos="flip-up" data-aos-offset="200" data-aos-delay="350" data-aos-duration="1000">Enviar</button> 
                         </div>        
                     </form>
                 </div>
