--- a/static/index.html
+++ b/static/index.html
@@ -57,13 +57,10 @@
                         data-aos-delay="300" class = "header"><strong>Seja bem vindo!</strong></h2>
                         <p data-aos="fade-up"
                         data-aos-offset="200"
-                        data-aos-delay="300" class = "header">Analise seus stats e ranking do Fortnite</p>   
+                        data-aos-delay="400" class = "header">Analise seus stats e ranking do Fortnite</p>   
                         <div class = "row2">             
                         <div class = "offset-sm-2 col-sm-8">
-                        <a href="#stats" class="btn btnD1" data-aos="fade-up"
-                        data-aos-offset="300"
-                        data-aos-delay="500" 
-                        data-aos-duration="1000">Vamos Lá</a>                    
+                        <a href="#stats" class="btn btnD1">Vamos Lá</a>                    
                         </div>
                     </div> 
                     </div>
@@ -100,7 +97,7 @@
                                     </div>
 
                                     <div class = "col-sm-3" style="margin-right: 41px">
-                                            <div class = "box" data-aos="fade-up" data-aos-offset="200"
+                                            <div class = "box" data-aos="flip-up" data-aos-offset="200"
                                             data-aos-delay="500" data-aos-duration="1000">
                                                 <div class = "imgBx">
                                                         <img src="https://i.imgur.com/HZZecI9.png" class= "img-fluid" alt="Imagem solos">
@@ -114,7 +111,7 @@
                                         </div>                            
 
                                     <div class = "col-sm-3" style="margin-right: 41px">
-                                        <div class = "box" data-aos="fade-up" data-aos-offset="200"
+                                        <div class = "box" data-aos="flip-down" data-aos-offset="200"
                                         data-aos-delay="700" data-aos-duration="1000">
                                             <div class = "imgBx">
                                                     <img src="https://i.imgur.com/vIz3EHx.png" class= "img-fluid" alt="Imagem Duos">
@@ -127,7 +124,7 @@
                                     </div>
 
                                     <div class = "col-sm-3">
-                                        <div class = "box" data-aos="fade-up" data-aos-offset="200"
+                                        <div class = "box" data-aos="flip-up" data-aos-offset="200"
                                         data-aos-delay="900" data-aos-duration="1000">
                                             <div class = "imgBx">
                                                     <img src="https://i.imgur.com/roVzTV8.png" class= "img-fluid" alt="Imagem squad">
@@ -205,20 +202,20 @@
             <div class = "row clearfix">
                 <div class = "offset-sm-2 col-sm-8">
                     <form>
-                        <div class = "form-group">
+                        <div class = "form-group" data-aos="flip-down" data-aos-offset="200" data-aos-delay="100" data-aos-duration="1000">
                             <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="100" data-aos-duration="1000">Nome</label>
                             <input type = "text" name = "" class = "form-control">
                         </div>
-                        <div class = "form-group">
-                                <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="200" data-aos-duration="1000">Email</label>
+                        <div class = "form-group" data-aos="flip-down" data-aos-offset="200" data-aos-delay="200" data-aos-duration="1000">
+                                <label data-aos= "fade-left" data-aos-offset="200" data-aos-delay="200" data-aos-duration="1000">Email</label>
                                 <input type = "text" name = "" class = "form-control">
                             </div>
-                        <div class = "form-group">
+                        <div class = "form-group" data-aos="flip-down" data-aos-offset="200" data-aos-delay="300" data-aos-duration="1000">
                                     <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="300" data-aos-duration="1000">Mensagem</label>
                                     <textarea class = "form-control textarea"> </textarea>
                                 </div> 
                         <div class = "form-group">
-                        <button class = "btn btnD1" data-aos="flip-up" data-aos-offset="200" data-aos-delay="350" data-aos-duration="1000">Enviar</button> 
+                        <button class = "btn btnD1">Enviar</button> 
                         </div>        
                     </form>
                 </div>
