--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@
                 </li>  
                 <li class="nav-item">
                         <a class="nav-link" href="#sobre">Sobre Nós</a>
-                    </li>    
+                    </li>  
                 </ul>                
             </div>
     </div>
@@ -215,8 +215,8 @@
                                     <textarea class = "form-control textarea"> </textarea>
                                 </div> 
                         <div class = "form-group">
-                        <button class = "btn btnD1">Enviar</button> 
-                        </div>        
+                        <button type="button" id="mensagem" class="btn btn-dark">Enviar</button> 
+                        </div>                                
                     </form>
                 </div>
 
