--- a/static/index.html
+++ b/static/index.html
@@ -33,10 +33,10 @@
                         <a class="nav-link" href="#stats">Stats</a>
                     </li>  
                 <li class="nav-item">
-                    <a class="nav-link" href="#desafios">Desafios</a>
+                    <a class="nav-link" href="#sobre">Sobre</a>
                 </li>  
                 <li class="nav-item">
-                        <a class="nav-link" href="#sobre">Sobre Nós</a>
+                        <a class="nav-link" href="#contato">Contato</a>
                     </li>  
                 </ul>                
             </div>
@@ -150,22 +150,26 @@
                         </div> 
                     </div>               
     </section>
-    <section class = "sec2" id = "desafios">
+    <section class = "sec2" id = "sobre">
         <div class = "contentbox h100">
             <div>
                 <h1 data-aos="fade-up"
                 data-aos-offset="200"
                 data-aos-delay="100" data-aos-duration="1000"
-                > Desafios Diários</h1>
+                >Sobre</h1>
+                <div class = "container">
                 <p h1 data-aos="fade-up"
                 data-aos-offset="200"
-                data-aos-delay="300">Segue abaixo seus desafios diários (Esperando a API sair da manutenção)</p>               
+                data-aos-delay="300">Fortnite é um jogo eletrônico multijogador online criado originalmente em 2011, 
+                desenvolvido pela Epic Games. Fortnite é um jogo que une os modos Battle Royale, Salve o Mundo e um Modo Criativo. </p>                                
+                <a href="#sobrenos" class="btn btnD1">Saiba mais</a>   
+            </div>
             </div>
         </div>
 
     </section>
 
-    <section class="sobrenos" id="sobre">
+    <section class="sobrenos" id="sobrenos">
         <div class = "container">
             <div class = "row">
                 <div class = "offset-sm-2 col-sm-8">
@@ -177,7 +181,7 @@
                         <p h1 data-aos="fade-up"
                         data-aos-offset="200"
                         data-aos-delay="500">O Fortnite Agent surgiu com o objetivo de difundir informações sobre jogadores de Fortnite
-                            ao redor do mundo. :) 
+                            ao redor do mundo. Rastreamos todas suas wins, mortes e tops! Com estatísticas atualizadas a cada temporada. 
                         </p>
                     </div>
                     </div>
@@ -243,6 +247,7 @@
     })
     </script>
     <script src="public/fortniteagent.js"></script>
+    <script src="public/desafios.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
