--- a/static/index.html
+++ b/static/index.html
@@ -207,21 +207,24 @@
             </div>
             <div class = "row clearfix">
                 <div class = "offset-sm-2 col-sm-8">
-                    <form>
+                    <form action="https://formspree.io/rafaritho@gmail.com" method="POST">
                         <div class = "form-group" data-aos="flip-down" data-aos-offset="200" data-aos-delay="100" data-aos-duration="1000">
-                            <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="100" data-aos-duration="1000">Nome</label>
-                            <input type = "text" name = "" class = "form-control">
+                            <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="100" data-aos-duration="1000">
+                                Nome</label>
+                            <input type = "text" name = "nome" class = "form-control">
                         </div>
                         <div class = "form-group" data-aos="flip-down" data-aos-offset="200" data-aos-delay="200" data-aos-duration="1000">
-                                <label data-aos= "fade-left" data-aos-offset="200" data-aos-delay="200" data-aos-duration="1000">Email</label>
-                                <input type = "text" name = "" class = "form-control">
+                            <label data-aos= "fade-left" data-aos-offset="200" data-aos-delay="200" data-aos-duration="1000">
+                                Email</label>
+                            <input type = "text" name = "replyto" class = "form-control">
                             </div>
                         <div class = "form-group" data-aos="flip-down" data-aos-offset="200" data-aos-delay="300" data-aos-duration="1000">
-                                    <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="300" data-aos-duration="1000">Mensagem</label>
-                                    <textarea class = "form-control textarea"> </textarea>
-                                </div> 
+                            <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="300" data-aos-duration="1000">
+                                Mensagem</label>
+                            <textarea class = "form-control textarea" name="mensagem"> </textarea>
+                            </div> 
                         <div class = "form-group">
-                        <button type="button" id="mensagem" class="btn btn-dark">Enviar</button> 
+                        <button type="submit" value = "send" class="btn btnD1">Enviar</button> 
                         </div>                                
                     </form>
                 </div>
@@ -239,6 +242,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <script type = "text/javascript">
     $(document).scroll(function(){
         $('.navbar').toggleClass('scrolled', $(this).
@@ -246,6 +250,7 @@
     })
     </script>
     <script src="public/fortniteagent.js"></script>
+    <script src="public/contato.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
