--- a/static/index.html
+++ b/static/index.html
@@ -207,7 +207,7 @@
             </div>
             <div class = "row clearfix">
                 <div class = "offset-sm-2 col-sm-8">
-                    <form action="https://formspree.io/rafaritho@gmail.com" method="POST">
+                    <form action="https://formspree.io/contato.fortnite.agent@gmail.com" method="POST">
                         <div class = "form-group" data-aos="flip-down" data-aos-offset="200" data-aos-delay="100" data-aos-duration="1000">
                             <label data-aos="fade-left" data-aos-offset="200" data-aos-delay="100" data-aos-duration="1000">
                                 Nome</label>
