--- a/static/index.html
+++ b/static/index.html
@@ -156,12 +156,12 @@
                 <h1 data-aos="fade-up"
                 data-aos-offset="200"
                 data-aos-delay="100" data-aos-duration="1000"
-                >Sobre</h1>
+                >Sobre o jogo</h1>
                 <div class = "container">
                 <p h1 data-aos="fade-up"
                 data-aos-offset="200"
-                data-aos-delay="300">Fortnite é um jogo eletrônico multijogador online criado originalmente em 2011, 
-                desenvolvido pela Epic Games. Fortnite é um jogo que une os modos Battle Royale, Salve o Mundo e um Modo Criativo. </p>                                
+                data-aos-delay="300">Fortnite é um Battle Royale desenvolvido pela Epic Games que pode ser jogado de graça no PS4, Xbox One, PC, Nintendo Switch e celulares Android e iPhone (iOS). O jogo é considerado um dos maiores sucesso do gênero, e ainda está entre os games online mais jogados atualmente. 
+                O título já está em sua nona temporada e recebe atualizações de conteúdo constantes.  </p>                                
                 <a href="#sobrenos" class="btn btnD1">Saiba mais</a>   
             </div>
             </div>
@@ -250,7 +250,6 @@
     })
     </script>
     <script src="public/fortniteagent.js"></script>
-    <script src="public/contato.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
